create new pyarrow pipeline and run prod pipeline

--- a/Pipelines/Development/PyarrowPipeline.ipynb
+++ b/Pipelines/Development/PyarrowPipeline.ipynb
@@ -1,17 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import All Required Libraries"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "# Import all connection libraries\n",
@@ -25,13 +24,47 @@
     "import pandas as pd\n",
     "from pandarallel import pandarallel\n",
     "from tqdm import tqdm\n",
+    "\n",
     "pandarallel.initialize(verbose=0, nb_workers=8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# establish connection to Spotify API\n",
+    "\n",
+    "cid = 'e5448a8a4fdc4b5d98b44e956d50546d'\n",
+    "secret = '8924c0394d3f49a4a569fc03e891aa1b'\n",
+    "client_credentials = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials, requests_timeout=15, retries=10)\n",
+    "\n",
+    "# establish connection to Postgres\n",
+    "\n",
+    "engine = sql.create_engine('postgresql+psycopg2://postgres:DataNerd2023!!\\\n",
+    "@localhost/spotify')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "from functools import lru_cache\n",
@@ -54,173 +87,48 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Establish External Connections"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "# establish connection to Spotify API\n",
-    "\n",
-    "cid = 'e5448a8a4fdc4b5d98b44e956d50546d'\n",
-    "secret = '8924c0394d3f49a4a569fc03e891aa1b'\n",
-    "client_credentials = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
-    "sp = spotipy.Spotify(client_credentials_manager=client_credentials, requests_timeout=15, retries=10)\n",
-    "\n",
-    "# establish connection to Postgres\n",
-    "\n",
-    "engine = sql.create_engine('postgresql+psycopg2://postgres:DataNerd2023!!\\\n",
-    "@localhost/spotify')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load Initial Training Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>playlist_uri</th>\n",
-       "      <th>playlist_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25303</th>\n",
-       "      <td>spotify:playlist:3dZtMbtwYDyZKsF6ff6LmI</td>\n",
-       "      <td>New Flavor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25311</th>\n",
-       "      <td>spotify:playlist:3XNR5Xh8RCxO4EAOA9atC1</td>\n",
-       "      <td>High Fashion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25313</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DX0jNl6iUx9qC</td>\n",
-       "      <td>FINAL FANTASY -relax-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25440</th>\n",
-       "      <td>spotify:playlist:6kTzEghapEBlJriD8gHtJ7</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25441</th>\n",
-       "      <td>spotify:playlist:0m3v2HJVpE9RWp0NpIzqQL</td>\n",
-       "      <td>Fun Songs for Babies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25442</th>\n",
-       "      <td>spotify:playlist:0q8HM745TGXDdD62K1svFr</td>\n",
-       "      <td>Friday Night Hits ✨</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25443</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DWSrj7tqQ9IOu</td>\n",
-       "      <td>Made in France</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25444</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DXdj82GcM2wq2</td>\n",
-       "      <td>70s FM Radio Rider</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25445</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DX65caF1CvtIN</td>\n",
-       "      <td>Piano for Healing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25446</th>\n",
-       "      <td>spotify:playlist:3gMTPDmxW5YVNhFQTAlpfj</td>\n",
-       "      <td>montell fish</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  playlist_uri          playlist_name\n",
-       "25303  spotify:playlist:3dZtMbtwYDyZKsF6ff6LmI             New Flavor\n",
-       "25311  spotify:playlist:3XNR5Xh8RCxO4EAOA9atC1           High Fashion\n",
-       "25313  spotify:playlist:37i9dQZF1DX0jNl6iUx9qC  FINAL FANTASY -relax-\n",
-       "25440  spotify:playlist:6kTzEghapEBlJriD8gHtJ7                    NaN\n",
-       "25441  spotify:playlist:0m3v2HJVpE9RWp0NpIzqQL   Fun Songs for Babies\n",
-       "25442  spotify:playlist:0q8HM745TGXDdD62K1svFr    Friday Night Hits ✨\n",
-       "25443  spotify:playlist:37i9dQZF1DWSrj7tqQ9IOu         Made in France\n",
-       "25444  spotify:playlist:37i9dQZF1DXdj82GcM2wq2     70s FM Radio Rider\n",
-       "25445  spotify:playlist:37i9dQZF1DX65caF1CvtIN     Piano for Healing \n",
-       "25446  spotify:playlist:3gMTPDmxW5YVNhFQTAlpfj           montell fish"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# load training data\n",
-    "new_batch = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\UVU-2022-2023\\\\distinct_playlists_new.csv')[['playlist_uri', 'playlist_name']]\n",
-    "new_batch['playlist_uri'] = new_batch['playlist_uri'].str.strip()\n",
     "\n",
-    "db_query = pd.read_sql('SELECT DISTINCT playlist_uri FROM playlist_tracks', engine)\n",
+    "with pd.option_context(\"mode.dtype_background\", \"pyarrow\"):\n",
+    "    new_batch = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\UVU-2022-2023\\\\distinct_playlists_new.csv')[['playlist_uri', 'playlist_name']]\n",
+    "    new_batch['playlist_uri'] = new_batch['playlist_uri'].str.strip()\n",
     "\n",
-    "outer = new_batch.merge(db_query, how='outer', indicator=True)\n",
-    "anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
+    "    db_query = pd.read_sql('SELECT DISTINCT playlist_uri FROM playlist_tracks', engine)\n",
     "\n",
-    "new_batch = pd.DataFrame(anti_join)\n",
-    "new_batch.head(10)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Iterate Through Training Data to Change Grain of Data"
+    "    outer = new_batch.merge(db_query, how='outer', indicator=True)\n",
+    "    anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
+    "\n",
+    "    new_batch = pd.DataFrame(anti_join)\n",
+    "    new_batch.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "def load_all_data():\n",
+    "    with pd.option_context(\"mode.dtype_background\", \"pyarrow\"):\n",
     "        # load training data\n",
     "        new_batch = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\UVU-2022-2023\\\\distinct_playlists_new.csv')[['playlist_uri', 'playlist_name']]\n",
     "        new_batch['playlist_uri'] = new_batch['playlist_uri'].str.strip()\n",
@@ -316,32 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 11%|█         | 2/18 [00:00<00:04,  3.25it/s]HTTP Error for GET to https://api.spotify.com/v1/playlists/37i9dQZF1DX0jNl6iUx9qC/tracks with Params: {'limit': 100, 'offset': 0, 'fields': None, 'market': None, 'additional_types': 'track'} returned 404 due to Not found.\n",
-      "100%|██████████| 18/18 [00:16<00:00,  1.09it/s]\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
     },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "playlist_tracks updated #1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/689 [00:00<?, ?it/s]"
-     ]
+    "polyglot_notebook": {
+     "kernelName": "csharp"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "i = 1\n",
     "\n",
@@ -353,7 +245,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "all_data1 = pd.read_sql('''SELECT DISTINCT playlist_uri, playlist_name, owner_uri, owner_display_name, collaborative, description, followers_total,\n",
@@ -376,7 +275,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "all_data2 = pd.read_sql('''SELECT DISTINCT playlist_uri, playlist_name, owner_uri, owner_display_name, collaborative, description, followers_total,\n",
@@ -399,7 +305,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "features1 = all_data1[['track_uri', 'track_name', 'artist1', 'artist2', 'artist3', 'artist4', 'artist5', 'album_name', 'release_date', 'danceability', 'energy', 'track_popularity', 'acousticness', 'valence', 'tempo']]\n",
@@ -412,25 +325,30 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "93b5e9cdcd0e28194f38e9cc58755c27f28a497cb713889038a7c6359ab34ab6"
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
+      "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
+     }
+    ]
    }
   }
  },
