Add code to refresh expired access token

--- a/Pipelines/Development/MultiProcessingPipeline.ipynb
+++ b/Pipelines/Development/MultiProcessingPipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,21 +19,46 @@
     "from tqdm import tqdm\n",
     "import pandasql\n",
     "\n",
+    "# Import libraries to refresh access token.\n",
+    "import time\n",
+    "import os\n",
+    "\n",
     "pandarallel.initialize(verbose=0, nb_workers=8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BQAiBMfZ7FtCELebVGNWe1fnEPa20E-A7LcBRM4AUcYImgaigz7ca8Mil7SjrokKETO4g31r18ZnzJgJJFbAAt5j4lC9JxQ2SNSpxlb2-luEfebsM60M'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Delete cached Spotify access token if an hour has passed since last access.\n",
+    "with open(\"timeCacheLastAccessed.txt\", \"r\", encoding=\"UTF-8\") as f:\n",
+    "    timeLastAccessed = float(f.readline())\n",
+    "if (time.time() - timeLastAccessed >= 3600):  # If an hour has passed.\n",
+    "    os.remove(\".cache\")\n",
+    "    with open(\"timeCacheLastAccessed.txt\", \"w\", encoding=\"UTF-8\") as f:\n",
+    "        f.write(str(time.time()))\n",
+    "\n",
     "# establish connection to Spotify API\n",
     "\n",
     "cid = 'e5448a8a4fdc4b5d98b44e956d50546d'\n",
     "secret = '8924c0394d3f49a4a569fc03e891aa1b'\n",
     "client_credentials = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
-    "sp = spotipy.Spotify(client_credentials_manager=client_credentials, requests_timeout=15, retries=10)\n"
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials, requests_timeout=15, retries=10)\n",
+    "\n",
+    "client_credentials.get_access_token(as_dict=False)  # Retreives new access token if necessary.\n"
    ]
   },
   {
