update playlists csv and pyarrow pipeline

--- a/Pipelines/Development/PyarrowPipeline.ipynb
+++ b/Pipelines/Development/PyarrowPipeline.ipynb
@@ -25,6 +25,10 @@
     "from pandarallel import pandarallel\n",
     "from tqdm import tqdm\n",
     "\n",
+    "# Import Libraries to Refresh Access Token\n",
+    "import time\n",
+    "import os\n",
+    "\n",
     "pandarallel.initialize(verbose=0, nb_workers=8)"
    ]
   },
@@ -39,8 +43,27 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BQBDQDYI-7ueeIIkrEOy9rToXTG7Xpvgia_YuWNyPSax-6C0a139MsU0KgJvHTyFHBe3ef-Aw5OkkQd2_AZ1vQmMe2LBXL9mP0CXICUQVibol3Od4YXO'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Delete cached Spotify access token if an hour has passed since last access.\n",
+    "with open(\"timeCacheLastAccessed.txt\", \"r\", encoding=\"UTF-8\") as f:\n",
+    "    timeLastAccessed = float(f.readline())\n",
+    "if (time.time() - timeLastAccessed >= 3600):  # If an hour has passed.\n",
+    "    os.remove(\".cache\")\n",
+    "    with open(\"timeCacheLastAccessed.txt\", \"w\", encoding=\"UTF-8\") as f:\n",
+    "        f.write(str(time.time()))\n",
+    "\n",
     "# establish connection to Spotify API\n",
     "\n",
     "cid = 'e5448a8a4fdc4b5d98b44e956d50546d'\n",
@@ -48,10 +71,10 @@
     "client_credentials = SpotifyClientCredentials(client_id=cid, client_secret=secret)\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials, requests_timeout=15, retries=10)\n",
     "\n",
-    "# establish connection to Postgres\n",
-    "\n",
     "engine = sql.create_engine('postgresql+psycopg2://postgres:DataNerd2023!!\\\n",
-    "@localhost/spotify')"
+    "@localhost/spotify')\n",
+    "\n",
+    "client_credentials.get_access_token(as_dict=False)  # Retreives new access token if necessary."
    ]
   },
   {
@@ -88,30 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import time\n",
-    "\n",
-    "# with pd.option_context(\"mode.dtype_backend\", \"pandas\"):\n",
-    "#     start_time = time.time()\n",
-    "#     df = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\Career Development\\\\Data Science Club\\\\Spring 2023 Club Project\\\\oltp_output1.csv')\n",
-    "#     end_time = time.time()\n",
-    "#     result= round(end_time - start_time, 2)\n",
-    "#     print(f'Pandas: {result} seconds')\n",
-    "\n",
-    "# with pd.option_context(\"mode.dtype_backend\", \"pyarrow\"):\n",
-    "#     start_time = time.time()\n",
-    "#     df = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\Career Development\\\\Data Science Club\\\\Spring 2023 Club Project\\\\oltp_output1.csv', engine='pyarrow')\n",
-    "#     end_time = time.time()\n",
-    "#     result= round(end_time - start_time, 2)\n",
-    "#     print(f'Pyarrow: {result} seconds')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -148,74 +148,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25762</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DWSfODohdgUzS</td>\n",
-       "      <td>Gama Gama Samayal</td>\n",
+       "      <th>0</th>\n",
+       "      <td>spotify:playlist:5IMpQdB7rXdmMTuzhlhPZ4</td>\n",
+       "      <td>69 HYPE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25866</th>\n",
-       "      <td>spotify:playlist:5PUG9coi4jMWXxC78jwYle</td>\n",
-       "      <td>grwm</td>\n",
+       "      <th>1</th>\n",
+       "      <td>spotify:playlist:2e8iff2Rxt2BP0VpgJpVfj</td>\n",
+       "      <td>Touhou OST (6-18)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25867</th>\n",
-       "      <td>spotify:playlist:08AhDTHGv4LFLO2ArRRZby</td>\n",
-       "      <td>GOOD VIBES RAP</td>\n",
+       "      <th>2</th>\n",
+       "      <td>spotify:playlist:7GTg7UFb2U2lsSZTfEwDQz</td>\n",
+       "      <td>Valerie - '68 Version</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25868</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DX9fZ7amiNVu6</td>\n",
-       "      <td>Feel Good Summer</td>\n",
+       "      <th>3</th>\n",
+       "      <td>spotify:playlist:7tvMtjQOPd08XgOBK6K3aE</td>\n",
+       "      <td>MORNING SEX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25869</th>\n",
-       "      <td>spotify:playlist:4VZULVqRx3jc9n7Qnw5IIJ</td>\n",
-       "      <td>getting ready 🍻😈</td>\n",
+       "      <th>4</th>\n",
+       "      <td>spotify:playlist:5T8y1iYFXgo0FNkYax3XkT</td>\n",
+       "      <td>AK-69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25870</th>\n",
-       "      <td>spotify:playlist:34uy1BBGYvOZIYCSWJy5AY</td>\n",
-       "      <td>New Gen Rap</td>\n",
+       "      <th>5</th>\n",
+       "      <td>spotify:playlist:5T8y1iYFXgo0FNkYax3XkT</td>\n",
+       "      <td>AK-69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25871</th>\n",
-       "      <td>spotify:playlist:3VsFifkbvvQ07fMV8nLYQY</td>\n",
-       "      <td>GYM</td>\n",
+       "      <th>6</th>\n",
+       "      <td>spotify:playlist:4ubFrmZ99vpCucevPNWRPQ</td>\n",
+       "      <td>Happy 60s, 70s, 80s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25872</th>\n",
-       "      <td>spotify:playlist:2jSPS9SOdZ6fEnfxZcMVPd</td>\n",
-       "      <td>Gangsta rap</td>\n",
+       "      <th>7</th>\n",
+       "      <td>spotify:playlist:7g61XIrplOs8Kiyn7CsIbN</td>\n",
+       "      <td>sex playlist 😫</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25873</th>\n",
-       "      <td>spotify:playlist:37i9dQZF1DXbENHm2OgowX</td>\n",
-       "      <td>gloomcore</td>\n",
+       "      <th>8</th>\n",
+       "      <td>spotify:playlist:5saOtgQGmyweUq8aKmvGVR</td>\n",
+       "      <td>Norske 60-talls hits</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25874</th>\n",
-       "      <td>spotify:playlist:0aL7M6qKDacHCtUUch3AhB</td>\n",
-       "      <td>Maroon 5 Greatest Hits</td>\n",
+       "      <th>9</th>\n",
+       "      <td>spotify:playlist:3vlpRGlGVLnLHR1ZlnqSeH</td>\n",
+       "      <td>60-luvun suomi-iskelmiä</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>spotify:playlist:2FPJyUmAP18umoGiSfKu1Z</td>\n",
+       "      <td>Fantasy | R&amp;B | by DJ 6rings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>spotify:playlist:1CUTq7XgrDEMBpaIrld7td</td>\n",
+       "      <td>Sirius 60s on 6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>spotify:playlist:2vQm9xw3ozv1e0gHpBJr5Z</td>\n",
+       "      <td>České hity 60. a 70. let</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>spotify:playlist:1OVq4xI3jpbrVl7sqxEvgg</td>\n",
+       "      <td>sleeping to cigarettes after sex.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>spotify:playlist:04QjDrbg82PxNa7xwD8ysW</td>\n",
+       "      <td>Esquadrao 6 - Soundtrack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>spotify:playlist:2clc4SLby8YaET3sv1LKkS</td>\n",
+       "      <td>daisy jones &amp; the six</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>spotify:playlist:7gTCSvWv9XwcqIPvGaBX3w</td>\n",
+       "      <td>60's Top Tracks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>spotify:playlist:1EBqmgjnrrOZHeSX49RTfd</td>\n",
+       "      <td>Hollandse Hits 60-70-80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>spotify:playlist:6cGFLM7g9hZMjUDAVyAXfH</td>\n",
+       "      <td>666 Rap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>spotify:playlist:37i9dQZF1DZ06evO3Fl5CN</td>\n",
+       "      <td>This Is 6363</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  playlist_uri           playlist_name\n",
-       "25762  spotify:playlist:37i9dQZF1DWSfODohdgUzS       Gama Gama Samayal\n",
-       "25866  spotify:playlist:5PUG9coi4jMWXxC78jwYle                    grwm\n",
-       "25867  spotify:playlist:08AhDTHGv4LFLO2ArRRZby          GOOD VIBES RAP\n",
-       "25868  spotify:playlist:37i9dQZF1DX9fZ7amiNVu6        Feel Good Summer\n",
-       "25869  spotify:playlist:4VZULVqRx3jc9n7Qnw5IIJ        getting ready 🍻😈\n",
-       "25870  spotify:playlist:34uy1BBGYvOZIYCSWJy5AY             New Gen Rap\n",
-       "25871  spotify:playlist:3VsFifkbvvQ07fMV8nLYQY                     GYM\n",
-       "25872  spotify:playlist:2jSPS9SOdZ6fEnfxZcMVPd             Gangsta rap\n",
-       "25873  spotify:playlist:37i9dQZF1DXbENHm2OgowX               gloomcore\n",
-       "25874  spotify:playlist:0aL7M6qKDacHCtUUch3AhB  Maroon 5 Greatest Hits"
+       "                               playlist_uri                      playlist_name\n",
+       "0   spotify:playlist:5IMpQdB7rXdmMTuzhlhPZ4                            69 HYPE\n",
+       "1   spotify:playlist:2e8iff2Rxt2BP0VpgJpVfj                  Touhou OST (6-18)\n",
+       "2   spotify:playlist:7GTg7UFb2U2lsSZTfEwDQz              Valerie - '68 Version\n",
+       "3   spotify:playlist:7tvMtjQOPd08XgOBK6K3aE                        MORNING SEX\n",
+       "4   spotify:playlist:5T8y1iYFXgo0FNkYax3XkT                              AK-69\n",
+       "5   spotify:playlist:5T8y1iYFXgo0FNkYax3XkT                              AK-69\n",
+       "6   spotify:playlist:4ubFrmZ99vpCucevPNWRPQ                Happy 60s, 70s, 80s\n",
+       "7   spotify:playlist:7g61XIrplOs8Kiyn7CsIbN                     sex playlist 😫\n",
+       "8   spotify:playlist:5saOtgQGmyweUq8aKmvGVR               Norske 60-talls hits\n",
+       "9   spotify:playlist:3vlpRGlGVLnLHR1ZlnqSeH            60-luvun suomi-iskelmiä\n",
+       "10  spotify:playlist:2FPJyUmAP18umoGiSfKu1Z       Fantasy | R&B | by DJ 6rings\n",
+       "11  spotify:playlist:1CUTq7XgrDEMBpaIrld7td                    Sirius 60s on 6\n",
+       "12  spotify:playlist:2vQm9xw3ozv1e0gHpBJr5Z           České hity 60. a 70. let\n",
+       "13  spotify:playlist:1OVq4xI3jpbrVl7sqxEvgg  sleeping to cigarettes after sex.\n",
+       "14  spotify:playlist:04QjDrbg82PxNa7xwD8ysW           Esquadrao 6 - Soundtrack\n",
+       "15  spotify:playlist:2clc4SLby8YaET3sv1LKkS              daisy jones & the six\n",
+       "16  spotify:playlist:7gTCSvWv9XwcqIPvGaBX3w                    60's Top Tracks\n",
+       "17  spotify:playlist:1EBqmgjnrrOZHeSX49RTfd            Hollandse Hits 60-70-80\n",
+       "18  spotify:playlist:6cGFLM7g9hZMjUDAVyAXfH                            666 Rap\n",
+       "19  spotify:playlist:37i9dQZF1DZ06evO3Fl5CN                       This Is 6363"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +284,7 @@
     "# load training data\n",
     "\n",
     "with pd.option_context(\"mode.dtype_backend\", \"pyarrow\"):\n",
-    "    new_batch = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\UVU-2022-2023\\\\distinct_playlists_new.csv', engine='pyarrow')[['playlist_uri', 'playlist_name']]\n",
+    "    new_batch = pd.read_csv('C:\\\\Users\\\\Chase\\\\OneDrive\\\\Documents\\\\temp\\\\UVU-2022-2023\\\\distinct_playlists_new.csv', engine='pyarrow')[['playlist_uri', 'playlist_name']]\n",
     "    new_batch['playlist_uri'] = new_batch['playlist_uri'].str.strip()\n",
     "\n",
     "    db_query = pd.read_sql('SELECT DISTINCT playlist_uri FROM playlist_tracks', engine)\n",
@@ -261,7 +321,7 @@
     "        anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
     "\n",
     "        new_batch = pd.DataFrame(anti_join)\n",
-    "        new_batch = new_batch[0:18]\n",
+    "        new_batch = new_batch[0:50]\n",
     "        \n",
     "        # extract all tracks in playlists\n",
     "        load_batch = []\n",
@@ -298,50 +358,51 @@
     "        print(f'playlist_tracks updated #{i}')\n",
     "        \n",
     "        # extract all artists\n",
-    "        df = pd.read_sql('''SELECT DISTINCT track_uri FROM artists''', engine)\n",
-    "        outer = load_batch.merge(df, how='outer', indicator=True)\n",
-    "        anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
+    "        # query = \"\"\"SELECT DISTINCT playlist_tracks.track_uri, playlist_tracks.track_name, artists.artist1, artists.artist2 FROM artists RIGHT JOIN playlist_tracks ON artists.track_uri = playlist_tracks.track_uri WHERE artist1 IS NULL AND LEFT(playlist_tracks.track_uri, 13) = 'spotify:track' ORDER BY playlist_tracks.track_uri, artist1 LIMIT 500\"\"\"\n",
+    "        # df = pd.read_sql(query, engine)\n",
     "\n",
-    "        df = pd.Series(anti_join['track_uri'])\n",
-    "        base_list = []\n",
-    "        for track in tqdm(df):\n",
-    "                try:\n",
-    "                        df2 = pd.json_normalize(sp.track(track), record_path=['artists'])\n",
-    "                        df2['track_uri'] = track\n",
-    "                        df2 = df2[['name', 'track_uri']]\n",
-    "                        base_list.append(df2)\n",
-    "                except:\n",
-    "                        pass\n",
-    "        df2 = pd.concat(base_list)\n",
+    "        # df = pd.Series(df['track_uri'])\n",
+    "        # base_list = []\n",
+    "        # for track in tqdm(df):\n",
+    "        #         try:\n",
+    "        #                 df2 = pd.json_normalize(sp.track(track), record_path=['artists'])\n",
+    "        #                 df2['track_uri'] = track\n",
+    "        #                 df2 = df2[['name', 'track_uri']]\n",
+    "        #                 base_list.append(df2)\n",
+    "        #         except:\n",
+    "        #                 pass\n",
+    "        # df2 = pd.concat(base_list)\n",
     "        \n",
-    "        df2['RN'] = df2.groupby(\"track_uri\")[\"name\"].rank(method=\"first\", ascending=True)\n",
-    "        df2 = df2.pivot(index='track_uri', columns=['RN'], values='name').reset_index()\n",
-    "        df2 = df2.rename(columns={1.0:'artist1', 2.0:'artist2', 3.0:'artist3', 4.0:'artist4', 5.0:'artist5'})\n",
-    "        df2 = df2[['track_uri', 'artist1', 'artist2', 'artist3', 'artist4', 'artist5']]\n",
+    "        # df2['RN'] = df2.groupby(\"track_uri\")[\"name\"].rank(method=\"first\", ascending=True)\n",
+    "        # df2 = df2.pivot(index='track_uri', columns=['RN'], values='name').reset_index()\n",
+    "        # df2 = df2.rename(columns={1.0:'artist1', 2.0:'artist2', 3.0:'artist3', 4.0:'artist4', 5.0:'artist5'})\n",
+    "        # try:\n",
+    "        #         df2 = df2[['track_uri', 'artist1', 'artist2', 'artist3', 'artist4', 'artist5']]\n",
+    "        # except(KeyError):\n",
+    "        #         df2 = df2[['track_uri', 'artist1', 'artist2']]\n",
     "        \n",
-    "        df2.to_sql('artists', engine, if_exists='append')\n",
-    "        print(f'artists updated #{i}')\n",
+    "        # df2.to_sql('artists', engine, if_exists='append')\n",
+    "        # print(f'artists updated #{i}')\n",
     "        \n",
-    "        # extract all audio_features\n",
-    "        df = pd.read_sql('''SELECT DISTINCT track_uri FROM audio_features''', engine)\n",
-    "        outer = load_batch.merge(df, how='outer', indicator=True)\n",
-    "        anti_join = outer[(outer._merge=='left_only')].drop('_merge', axis=1)\n",
+    "        # # extract all audio_features\n",
+    "        # query = \"\"\"SELECT DISTINCT playlist_tracks.track_uri, playlist_tracks.track_name, audio_features.danceability FROM audio_features RIGHT JOIN playlist_tracks ON audio_features.track_uri = playlist_tracks.track_uri WHERE danceability IS NULL AND LEFT(playlist_tracks.track_uri,13) = 'spotify:track' ORDER BY playlist_tracks.track_uri, danceability LIMIT 500\"\"\"\n",
+    "        # df = pd.read_sql(query, engine)\n",
     "\n",
-    "        df = pd.Series(anti_join['track_uri'])\n",
+    "        # df = pd.Series(df['track_uri'])\n",
     "\n",
-    "        base_list = []\n",
-    "        for track in tqdm(df):\n",
-    "                try:\n",
-    "                        df3 = pd.json_normalize(sp.audio_features(track))\n",
-    "                        df3['track_uri'] = track\n",
-    "                        df3 = df3[['track_uri', 'danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo', 'duration_ms', 'time_signature']]\n",
-    "                        base_list.append(df3)\n",
-    "                except:\n",
-    "                        pass\n",
-    "        df3 = pd.concat(base_list)\n",
+    "        # base_list = []\n",
+    "        # for track in tqdm(df):\n",
+    "        #         try:\n",
+    "        #                 df3 = pd.json_normalize(sp.audio_features(track))\n",
+    "        #                 df3['track_uri'] = track\n",
+    "        #                 df3 = df3[['track_uri', 'danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo', 'duration_ms', 'time_signature']]\n",
+    "        #                 base_list.append(df3)\n",
+    "        #         except:\n",
+    "        #                 pass\n",
+    "        # df3 = pd.concat(base_list)\n",
     "        \n",
-    "        df3.to_sql('audio_features', con=engine, if_exists='append')\n",
-    "        print(f'audio_features updated #{i}')"
+    "        # df3.to_sql('audio_features', con=engine, if_exists='append')\n",
+    "        # print(f'audio_features updated #{i}')"
    ]
   },
   {
